prueba-almacenamiento.yaml
# Creamos una aplicación de prueba
apiVersion: v1
kind: Pod
metadata:
  name: test-nginx-pvc
spec:
  volumes:
    - name: pvc
      persistentVolumeClaim:
        claimName: test-pvc
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
      volumeMounts:
        - name: pvc
          mountPath: /usr/share/nginx/html
