metallb-service.yaml
# https://microk8s.io/docs/addon-metallb
# Habilita el loadbalancer y metallb
# microk8s enable ingress
# microk8s enable metallb:[rango_IPs_para_usar]  Aca uso la IP de la LAN donde estan los servidores (192.168.0.210-192.168.0.210)
# Habilitar las IP
# kubectl apply -f metallb-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: ingress
  namespace: ingress
  # annotations:
    # metallb.universe.tf/address-pool: custom-addresspool
spec:
  selector:
    name: nginx-ingress-microk8s
  type: LoadBalancer
  # loadBalancerIP: 10.244.0.24 # (optional) you can hard code the IP here if you like
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
